// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeMap should change map region to user's location when button is pressed 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    [
      {
        "backgroundColor": "#F3F1E8",
        "flex": 1,
      },
      {
        "backgroundColor": "#F3F1E8",
      },
    ]
  }
  testID="range-map-container"
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#F3F1E8",
        "flexDirection": "row",
        "minHeight": 64,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <View
      style={
        {
          "height": 48,
          "width": 48,
        }
      }
    />
    <Text
      accessibilityRole="header"
      numberOfLines={2}
      style={
        {
          "color": "#111512",
          "flex": 1,
          "fontFamily": "Lato-Bold",
          "fontSize": 22,
          "lineHeight": 28,
          "marginHorizontal": 8,
        }
      }
    >
      Range map
    </Text>
    <View>
      <View
        accessibilityLabel="View notifications"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={8}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 24,
              "height": 48,
              "justifyContent": "center",
              "minHeight": 48,
              "minWidth": 48,
              "width": 48,
            },
            false,
            false,
          ]
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={24}
          bbWidth={24}
          fill="none"
          focusable={false}
          height={24}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="#111512"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 24,
                "width": 24,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={24}
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4279309586,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          >
            <RNSVGPath
              d="M18 8.8c0-3.1-2.2-5.3-6-5.3s-6 2.2-6 5.3c0 5.7-2 6.4-2 7.7h16c0-1.3-2-2-2-7.7Z"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            />
            <RNSVGPath
              d="M9.8 19a2.3 2.3 0 0 0 4.4 0"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        style={
          {
            "backgroundColor": "#E0A82E",
            "borderColor": "#FFFFFF",
            "borderRadius": 5,
            "borderWidth": 1,
            "height": 10,
            "position": "absolute",
            "right": 11,
            "top": 11,
            "width": 10,
          }
        }
        testID="unreadNotificationsIndicator"
      />
    </View>
  </View>
  <View
    style={
      {
        "backgroundColor": "#F3F1E8",
        "flex": 1,
      }
    }
  >
    <View
      onRegionChangeComplete={[Function]}
      provider="default"
      region={
        {
          "latitude": 42.42,
          "latitudeDelta": 0.2,
          "longitude": 42.42,
          "longitudeDelta": 0.2,
        }
      }
      style={
        {
          "height": 1259,
          "width": 750,
        }
      }
      testID="range-map"
      zoomEnabled={true}
    >
      <View
        tileSize={512}
        urlTemplate="https://api.inaturalist.org/v1/grid/{z}/{x}/{y}.png?taxon_id=some_id&color=%2377B300&verifiable=true"
      />
      <View
        coordinate={
          {
            "latitude": 42.1234567,
            "longitude": 42.1234567,
          }
        }
      >
        <Image
          source={
            {
              "testUri": "../../../assets/icons/icon-camerabutton-onmap.webp",
            }
          }
        />
      </View>
      <View
        coordinate={
          {
            "latitude": 42.42,
            "longitude": 42.42,
          }
        }
      >
        <Image
          source={
            {
              "testUri": "../../../assets/icons/icon-location-onmap.webp",
            }
          }
        />
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E6E9E4",
          "borderTopRightRadius": 22,
          "borderWidth": 1,
          "bottom": 0,
          "left": 0,
          "opacity": 1,
          "paddingBottom": 23,
          "paddingLeft": 22,
          "paddingRight": 28,
          "position": "absolute",
        }
      }
    >
      <Text
        style={
          [
            {
              "textAlign": "left",
            },
            [
              {
                "color": "#ffffff",
                "fontFamily": "Lato-Bold",
                "fontSize": 18,
                "letterSpacing": 1.12,
              },
              {
                "color": "#111512",
                "marginTop": 18,
                "textAlign": "center",
              },
            ],
            null,
          ]
        }
      >
        Legend
      </Text>
    </View>
    <View
      accessibilityLabel="Return to your current location"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "bottom": 19,
          "opacity": 1,
          "position": "absolute",
          "right": 19,
        }
      }
      testID="user-location-button"
    >
      <Image
        source={
          {
            "testUri": "../../../assets/icons/icon-locationindicator.webp",
          }
        }
      />
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`RangeMap should render correctly 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    [
      {
        "backgroundColor": "#F3F1E8",
        "flex": 1,
      },
      {
        "backgroundColor": "#F3F1E8",
      },
    ]
  }
  testID="range-map-container"
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#F3F1E8",
        "flexDirection": "row",
        "minHeight": 64,
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <View
      style={
        {
          "height": 48,
          "width": 48,
        }
      }
    />
    <Text
      accessibilityRole="header"
      numberOfLines={2}
      style={
        {
          "color": "#111512",
          "flex": 1,
          "fontFamily": "Lato-Bold",
          "fontSize": 22,
          "lineHeight": 28,
          "marginHorizontal": 8,
        }
      }
    >
      Range map
    </Text>
    <View>
      <View
        accessibilityLabel="View notifications"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={8}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 24,
              "height": 48,
              "justifyContent": "center",
              "minHeight": 48,
              "minWidth": 48,
              "width": 48,
            },
            false,
            false,
          ]
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={24}
          bbWidth={24}
          fill="none"
          focusable={false}
          height={24}
          meetOrSlice={0}
          minX={0}
          minY={0}
          stroke="#111512"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 24,
                "width": 24,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={24}
        >
          <RNSVGGroup
            fill={null}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4279309586,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2}
          >
            <RNSVGPath
              d="M18 8.8c0-3.1-2.2-5.3-6-5.3s-6 2.2-6 5.3c0 5.7-2 6.4-2 7.7h16c0-1.3-2-2-2-7.7Z"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            />
            <RNSVGPath
              d="M9.8 19a2.3 2.3 0 0 0 4.4 0"
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        style={
          {
            "backgroundColor": "#E0A82E",
            "borderColor": "#FFFFFF",
            "borderRadius": 5,
            "borderWidth": 1,
            "height": 10,
            "position": "absolute",
            "right": 11,
            "top": 11,
            "width": 10,
          }
        }
        testID="unreadNotificationsIndicator"
      />
    </View>
  </View>
  <View
    style={
      {
        "backgroundColor": "#F3F1E8",
        "flex": 1,
      }
    }
  >
    <View
      onRegionChangeComplete={[Function]}
      provider="default"
      region={
        {
          "latitude": 42.1234567,
          "longitude": 42.1234567,
        }
      }
      style={
        {
          "height": 1259,
          "width": 750,
        }
      }
      testID="range-map"
      zoomEnabled={true}
    >
      <View
        tileSize={512}
        urlTemplate="https://api.inaturalist.org/v1/grid/{z}/{x}/{y}.png?taxon_id=some_id&color=%2377B300&verifiable=true"
      />
      <View
        coordinate={
          {
            "latitude": 42.1234567,
            "longitude": 42.1234567,
          }
        }
      >
        <Image
          source={
            {
              "testUri": "../../../assets/icons/icon-camerabutton-onmap.webp",
            }
          }
        />
      </View>
      <View
        coordinate={
          {
            "latitude": 42.42,
            "longitude": 42.42,
          }
        }
      >
        <Image
          source={
            {
              "testUri": "../../../assets/icons/icon-location-onmap.webp",
            }
          }
        />
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#FFFFFF",
          "borderColor": "#E6E9E4",
          "borderTopRightRadius": 22,
          "borderWidth": 1,
          "bottom": 0,
          "left": 0,
          "opacity": 1,
          "paddingBottom": 23,
          "paddingLeft": 22,
          "paddingRight": 28,
          "position": "absolute",
        }
      }
    >
      <Text
        style={
          [
            {
              "textAlign": "left",
            },
            [
              {
                "color": "#ffffff",
                "fontFamily": "Lato-Bold",
                "fontSize": 18,
                "letterSpacing": 1.12,
              },
              {
                "color": "#111512",
                "marginTop": 18,
                "textAlign": "center",
              },
            ],
            null,
          ]
        }
      >
        Legend
      </Text>
    </View>
    <View
      accessibilityLabel="Return to your current location"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "bottom": 19,
          "opacity": 1,
          "position": "absolute",
          "right": 19,
        }
      }
      testID="user-location-button"
    >
      <Image
        source={
          {
            "testUri": "../../../assets/icons/icon-locationindicator.webp",
          }
        }
      />
    </View>
  </View>
</RNCSafeAreaView>
`;
